--- a/Biomasa/nbproject/private/private.properties
+++ b/Biomasa/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\\u0110or\u0111e\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\George\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
